force-app/main/default/objects/Account/fields/Abbey__c.field-meta.xml
<CustomField>
    <fullName>Abbey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Abbey Dealer Buying Group</inlineHelpText>
    <label>Abbey</label>
    <type>Checkbox</type>
</CustomField>