force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Bucket &amp; Trowel</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Commercial Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Interior Design</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath</fullName>
            </value>
            <value>
                <fullName>LVT</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Residential Contractor</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>