force-app/main/default/objects/Account/fields/Account_Focus__c.field-meta.xml
<CustomField>
    <fullName>Account_Focus__c</fullName>
    <label>Account Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>PDR</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Why Bother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>