force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Preserve</fullName>
            </value>
            <value>
                <fullName>B - Expand</fullName>
            </value>
            <value>
                <fullName>C - Cultivate</fullName>
            </value>
            <value>
                <fullName>D - Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>