force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>Commercial Contractors</fullName>
            </value>
            <value>
                <fullName>Competitior</fullName>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Dealers</fullName>
            </value>
            <value>
                <fullName>Designers</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>General Contractors</fullName>
            </value>
            <value>
                <fullName>Homeowners</fullName>
            </value>
            <value>
                <fullName>Landscape Architect / Designer</fullName>
            </value>
            <value>
                <fullName>Landscape Contractor</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
            <value>
                <fullName>Project Owners - Commercial</fullName>
            </value>
            <value>
                <fullName>Regional Account</fullName>
            </value>
            <value>
                <fullName>Residential Contractors</fullName>
            </value>
            <value>
                <fullName>Residential Designer</fullName>
            </value>
            <value>
                <fullName>Vendor/Manufacturer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>