force-app/main/default/objects/Account/fields/Alliance__c.field-meta.xml
<CustomField>
    <fullName>Alliance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Alliance Buying Group</inlineHelpText>
    <label>Alliance</label>
    <type>Checkbox</type>
</CustomField>