force-app/main/default/objects/Account/fields/AO_Crossville_Now__c.field-meta.xml
<CustomField>
    <fullName>AO_Crossville_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AO/Crossville Now</label>
    <type>Checkbox</type>
</CustomField>