force-app/main/default/objects/Account/fields/AO_Gold__c.field-meta.xml
<CustomField>
    <fullName>AO_Gold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>American Olean Gold Promo</description>
    <label>AO Gold</label>
    <type>Checkbox</type>
</CustomField>