force-app/main/default/objects/Account/fields/Aqua_Mix__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Mix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Mix</label>
    <type>Checkbox</type>
</CustomField>