force-app/main/default/objects/Account/fields/Are_They_Purchasing_Schluter_from_LTD__c.field-meta.xml
<CustomField>
    <fullName>Are_They_Purchasing_Schluter_from_LTD__c</fullName>
    <label>Are They Purchasing Schluter from LTD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>