force-app/main/default/objects/Account/fields/Backup_LTD_Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Backup_LTD_Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup LTD Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>