force-app/main/default/objects/Account/fields/BKBG__c.field-meta.xml
<CustomField>
    <fullName>BKBG__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>BKBG Buying Group</inlineHelpText>
    <label>BKBG</label>
    <type>Checkbox</type>
</CustomField>