force-app/main/default/objects/Account/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <type>TextArea</type>
</CustomField>