force-app/main/default/objects/Account/fields/CaseSafe_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Account_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Account ID</label>
    <type>Text</type>
</CustomField>