force-app/main/default/objects/Account/fields/CBP_25_Margin__c.field-meta.xml
<CustomField>
    <fullName>CBP_25_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBP 25 Margin</label>
    <type>Checkbox</type>
</CustomField>