force-app/main/default/objects/Account/fields/CBP_Pallet__c.field-meta.xml
<CustomField>
    <fullName>CBP_Pallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBP Pallet</label>
    <type>Checkbox</type>
</CustomField>