force-app/main/default/objects/Account/fields/CCA_Global__c.field-meta.xml
<CustomField>
    <fullName>CCA_Global__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CCA Global Buying Group</inlineHelpText>
    <label>CCA Global</label>
    <type>Checkbox</type>
</CustomField>