force-app/main/default/objects/Account/fields/Commercial_Sales_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Sales_This_Year__c</fullName>
    <label>Commercial Sales (This Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>