force-app/main/default/objects/Account/fields/Competitors_Future_Targets__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Future_Targets__c</fullName>
    <label>Competitors &amp; Future Targets</label>
    <type>TextArea</type>
</CustomField>