force-app/main/default/objects/Account/fields/Crossville_SEN__c.field-meta.xml
<CustomField>
    <fullName>Crossville_SEN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Crossville SEN Buying Group</inlineHelpText>
    <label>Crossville SEN</label>
    <type>Checkbox</type>
</CustomField>