force-app/main/default/objects/Account/fields/Current_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Current_Open_Opps__c</fullName>
    <label>Current Open Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Sold, Lost, Lost / Unknown, On Hold, Abandoned</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>