force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1 - Residential</fullName>
            </value>
            <value>
                <fullName>A2 - Commercial</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>E1 - Education</fullName>
            </value>
            <value>
                <fullName>G1 - Government</fullName>
            </value>
            <value>
                <fullName>GC1 - General Contractor</fullName>
            </value>
            <value>
                <fullName>H1 - Hospitality</fullName>
            </value>
            <value>
                <fullName>H2</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>M1 - Medical</fullName>
            </value>
            <value>
                <fullName>N1 - National Account</fullName>
            </value>
            <value>
                <fullName>POM - Property Owner / Manager</fullName>
            </value>
            <value>
                <fullName>RA1</fullName>
            </value>
            <value>
                <fullName>RA2</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>V1 - Tile Manufacturer</fullName>
            </value>
            <value>
                <fullName>V2 - Install Product Manufacturer</fullName>
            </value>
            <value>
                <fullName>V3 - IT / Data / Consultant</fullName>
            </value>
            <value>
                <fullName>V4 - Logistics Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>