force-app/main/default/objects/Account/fields/Dancik_Account__c.field-meta.xml
<CustomField>
    <fullName>Dancik_Account__c</fullName>
    <label>Dancik Account #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>