force-app/main/default/objects/Account/fields/Dap_Ditra__c.field-meta.xml
<CustomField>
    <fullName>Dap_Ditra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dap Ditra</label>
    <type>Checkbox</type>
</CustomField>