force-app/main/default/objects/Account/fields/Date_of_Last_Sold_Opp__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Sold_Opp__c</fullName>
    <label>Date of Last Sold Opp</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>