force-app/main/default/objects/Account/fields/Days_Since_Last_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Oppty__c</fullName>
    <formula>TODAY() - DATEVALUE (Oppty_Created_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>