force-app/main/default/objects/Account/fields/Decor24__c.field-meta.xml
<CustomField>
    <fullName>Decor24__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decor24</label>
    <type>Checkbox</type>
</CustomField>