force-app/main/default/objects/Account/fields/Decor24_Login__c.field-meta.xml
<CustomField>
    <fullName>Decor24_Login__c</fullName>
    <description>Dealer customer account login name for Decor24 system</description>
    <inlineHelpText>Dealer customer account login name for Decor24 system</inlineHelpText>
    <label>Decor24 Login</label>
    <length>25</length>
    <type>Text</type>
</CustomField>