force-app/main/default/objects/Account/fields/Decor24_Password__c.field-meta.xml
<CustomField>
    <fullName>Decor24_Password__c</fullName>
    <description>Dealer customer accounts password to Decor24 system</description>
    <inlineHelpText>Dealer customer accounts password to Decor24 system</inlineHelpText>
    <label>Decor24 Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>