force-app/main/default/objects/Account/fields/Decor_24_Are_All_Employees_Trained_ON__c.field-meta.xml
<CustomField>
    <fullName>Decor_24_Are_All_Employees_Trained_ON__c</fullName>
    <label>Decor 24: Are All Employees Trained On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Promo&apos;s</fullName>
            </value>
            <value>
                <fullName>Reviewing Orders</fullName>
            </value>
            <value>
                <fullName>Placing Orders</fullName>
            </value>
            <value>
                <fullName>Reviewing Available Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>