force-app/main/default/objects/Account/fields/Dodge_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Company_URL__c</fullName>
    <inlineHelpText>Link to the Company profile page in the McGraw-Hill/Dodge Construction Network.</inlineHelpText>
    <label>Dodge Company URL</label>
    <type>Url</type>
</CustomField>