force-app/main/default/objects/Account/fields/Does_the_Dealer_Stock_Tile__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Dealer_Stock_Tile__c</fullName>
    <description>Field label changed per KF 1/19/2011
Changed field type to text from picklist on 2/22/11 per KF</description>
    <inlineHelpText>Enter tile brands and series stocked by the customer</inlineHelpText>
    <label>What Tiles Brands Do You Stock?</label>
    <type>TextArea</type>
</CustomField>