force-app/main/default/objects/Account/fields/ERP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_Number__c</fullName>
    <label>ERP Account Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>