force-app/main/default/objects/Account/fields/Firm_Scope__c.field-meta.xml
<CustomField>
    <fullName>Firm_Scope__c</fullName>
    <label>Firm Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Works in Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>