force-app/main/default/objects/Account/fields/Florida_Buzz__c.field-meta.xml
<CustomField>
    <fullName>Florida_Buzz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Florida Buzz</label>
    <type>Checkbox</type>
</CustomField>