force-app/main/default/objects/Account/fields/Forecast_Pipeline_Management__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Pipeline_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast / Pipeline Management</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Forecast / Pipeline Management)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>