force-app/main/default/objects/Account/fields/Former_Employee__c.field-meta.xml
<CustomField>
    <fullName>Former_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former Employee</label>
    <type>Checkbox</type>
</CustomField>