force-app/main/default/objects/Account/fields/Glass__c.field-meta.xml
<CustomField>
    <fullName>Glass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stocking Glass</label>
    <type>Checkbox</type>
</CustomField>