force-app/main/default/objects/Account/fields/GLScheduler__Declarative_Scheduler_DateTime__c.field-meta.xml
<CustomField>
    <fullName>GLScheduler__Declarative_Scheduler_DateTime__c</fullName>
    <label>Declarative Scheduler DateTime</label>
    <type>DateTime</type>
</CustomField>