force-app/main/default/objects/Account/fields/Has_All_Paper_Pricing_Been_Removed__c.field-meta.xml
<CustomField>
    <fullName>Has_All_Paper_Pricing_Been_Removed__c</fullName>
    <label>Has All Paper Pricing Been Removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>