force-app/main/default/objects/Account/fields/Kerridge_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Account_Number__c</fullName>
    <label>Kerridge Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>