force-app/main/default/objects/Account/fields/Laticrete_25__c.field-meta.xml
<CustomField>
    <fullName>Laticrete_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laticrete 25%</label>
    <type>Checkbox</type>
</CustomField>