force-app/main/default/objects/Account/fields/Laticrete_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Laticrete_Pallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Laticrete Pallet</label>
    <type>Checkbox</type>
</CustomField>