force-app/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>