force-app/main/default/objects/Account/fields/LT_Account_Purchase_Volume__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_Purchase_Volume__c</fullName>
    <label>LT Account Purchase Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>