force-app/main/default/objects/Account/fields/LT_Account_Remark__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_Remark__c</fullName>
    <label>LT Account Remark</label>
    <type>TextArea</type>
</CustomField>