force-app/main/default/objects/Account/fields/LT_Account_State__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_State__c</fullName>
    <label>LT Account State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatesName</valueSetName>
    </valueSet>
</CustomField>