force-app/main/default/objects/Account/fields/LT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_Type__c</fullName>
    <label>LT Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Residential Dealer</fullName>
            </value>
            <value>
                <fullName>Commercial Dealer</fullName>
            </value>
            <value>
                <fullName>Big Box</fullName>
            </value>
            <value>
                <fullName>Flooring Contractor</fullName>
            </value>
            <value>
                <fullName>Design Showroom</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
                <isActive>false</isActive>
                <label>Dealer</label>
            </value>
            <value>
                <fullName>Design Firm</fullName>
                <isActive>false</isActive>
                <label>Design Firm</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Type 1</fullName>
                <isActive>false</isActive>
                <label>Type 1</label>
            </value>
            <value>
                <fullName>Type 2</fullName>
                <isActive>false</isActive>
                <label>Type 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>