force-app/main/default/objects/Account/fields/LTD_Inside_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>LTD_Inside_Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LTD Inside Sales Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>