force-app/main/default/objects/Account/fields/Mohawk_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Mohawk_Aligned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mohawk Aligned Buying Group</inlineHelpText>
    <label>Mohawk Aligned</label>
    <type>Checkbox</type>
</CustomField>