force-app/main/default/objects/Account/fields/No_Library_Display__c.field-meta.xml
<CustomField>
    <fullName>No_Library_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked when the account does not have a library display onsite</description>
    <label>No Library</label>
    <type>Checkbox</type>
</CustomField>