force-app/main/default/objects/Account/fields/of_Ceramic_Sales_to_Ttl_Flooring_Sales__c.field-meta.xml
<CustomField>
    <fullName>of_Ceramic_Sales_to_Ttl_Flooring_Sales__c</fullName>
    <description>Field label changed per KF 1/19/2011
Changed field labe per KF email 1/21/2011</description>
    <label>What Is Your % of Stock to Tile Sales?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>