force-app/main/default/objects/Account/fields/Open_AR__c.field-meta.xml
<CustomField>
    <fullName>Open_AR__c</fullName>
    <label>Open AR $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>