force-app/main/default/objects/Account/fields/Open_Order__c.field-meta.xml
<CustomField>
    <fullName>Open_Order__c</fullName>
    <label>Open Order $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>