force-app/main/default/objects/Account/fields/Oppty_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Created_Date__c</fullName>
    <label>Oppty Created Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>