force-app/main/default/objects/Account/fields/Orchid__c.field-meta.xml
<CustomField>
    <fullName>Orchid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orchid</label>
    <type>Checkbox</type>
</CustomField>